# SwarMantra

./: .gitignore  NEXT_STEPS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-06-11-rust-sqlite-crud-backend-design.md
prisma/: dev.db  schema.prisma
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
src/components/: BandishForm.tsx  Layout.tsx  Modal.tsx  NotationEditor.tsx  RaagForm.tsx  SargamForm.tsx  TaanForm.tsx  TaanGroupedList.tsx  Toast.tsx
src/components/__tests__/: Layout.test.tsx  Modal.test.tsx
src/pages/: BandishPage.tsx  DashboardPage.tsx  RaagPage.tsx  SargamPage.tsx  TaanPage.tsx
src/services/: bandishService.ts  pdfService.ts  raagService.ts  sargamService.ts  swarService.ts  taanService.ts
src/services/__tests__/: pdfService.test.ts  swarService.test.ts
src/store/: appStore.ts
src/styles/: index.css
src/utils/: swarInput.ts  taalConfig.ts
