[package]
name = "swar_notebook"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2.6.2", features = [] }
tauri-plugin-dialog = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
